--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <img src="assetsprofile.jpg" alt="Giovana Cunico" class="profile-photo">
+        <img src="assets/profile.jpg" alt="Giovana Cunico" class="profile-photo">
         <h1>Giovana Cunico</h1>
         <p class="headline">Your Professional Title</p>
         <div class="contact">
-            <a href="mailto:gihcunico@gmail..com">gihcunico@gmail.com</a> |
+            <a href="mailto:gihcunico@gmail.com">gihcunico@gmail.com</a> |
             <a href="https://github.com/gcunico" target="_blank">GitHub</a> |
             <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
         </div>
@@ -69,3 +69,4 @@
     </footer>
 </body>
 </html>
+
